--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ published: true
             <li>Get the background image files.</li>
           </ol>
           <p>
-            I checked archive.org with not luck, and after some searching I found it had been <a href="http://archive.is/12F1r">archived at http://archive.is/</a>, so I clicked the "download .zip" link and had all of the images neccessary to proceed to
+            I checked archive.org with not luck, and after some searching I found it had been <a href="http://archive.is/12F1r">archived at http://archive.is/</a>, so I clicked the "download .zip" link and had all of the images necessary to proceed to
             migrating the design to Bootstrap. I also inspected the code with Chrome's developer tools to confirm that it wasn't already in Bootstrap. Below is a screen shot of the archive.is code. I think it was probably mocked up using Bootstrap (Based
             on the row widths of 970px and left and right margins that are 15px and -15px), but the way that it has been archived has replaced the code with a bunch of span tags and inline css declarations, which you can see below.
           </p>
@@ -137,7 +137,7 @@ published: true
 
           <h2>Rough Layout</h2>
           <p>
-            I then created a new project using Jekyll, deleted unneccessary default files that Jekyll generates for a new project, and added the Bootsrap CDN links. I used dummy images using Placehold.it to quickly work through the rough layout.
+            I then created a new project using Jekyll, deleted unnecessary default files that Jekyll generates for a new project, and added the Bootstrap CDN links. I used dummy images using Placehold.it to quickly work through the rough layout.
           </p> <a class="btn btn-default" href="rough_layout.html">Rough Layout</a>
 
         </div>
@@ -172,24 +172,24 @@ published: true
             <li>
               <h4>Changed the Tag Line from business facing to consumer facing.</h4>
               <p>
-                The original idea for the app was to allow customers to check in to a resturant and order meals from their smartphones. When a customer goes to the web page to download the app they are greated with a tag line "Let The Buyer Be Your Business Marketing"
-                which really speaks to resturant owners. I think that most customers would not download this app just to order food when tradional ordering from wait staff is so easy. Fudsquare needs a more compelling way to entice customers to download
+                The original idea for the app was to allow customers to check in to a restaurant and order meals from their smartphones. When a customer goes to the web page to download the app they are greeted with a tag line "Let The Buyer Be Your Business Marketing"
+                which really speaks to restaurant owners. I think that most customers would not download this app just to order food when traditional ordering from wait staff is so easy. Fudsquare needs a more compelling way to entice customers to download
                 the app. I changed the tag line to "Foodies: You've found the app for YOU". The app marketing should be aimed food buffs who want to find, collect, and share the meals that they experience. The original tag line could be used in a "Fudsquare
                 for business" page on the web site, but it is potentially confusing for customers.
               </p>
             </li>
             <li>
-              <h4>Reordered the features explanations to reflect the sequential order of the main use case senario while using the app.</h4>
+              <h4>Reordered the features explanations to reflect the sequential order of the main use case scenario while using the app.</h4>
               <p>
                 The first change I made for the web page was to move the three glyphicon bullet points up from the middle to just below the splash image. Once a customer lands on the home page it is very important for them to clearly see what the app can do for them.
                 Moving the glyphicons to the top will give them an immediate sense of what the app can do for them with three simple points. The customer can then scroll down the page to get more informative explanations of the features in the sequential
-                order of the main use case senario to reinforce the apps capabilities.
+                order of the main use case scenario to reinforce the apps capabilities.
               </p>
             </li>
             <li>
-              <h4>Repaced text links to the app stores with buttons.</h4>
+              <h4>Replaced text links to the app stores with buttons.</h4>
               <p>
-                Replacing the text links with standard buttons increases the scanability of the page for users who what to download the app immediately.
+                Replacing the text links with standard buttons increases the scannability of the page for users who what to download the app immediately.
               </p>
             </li>
           </ol>
