--- a/index.html
+++ b/index.html
@@ -70,11 +70,13 @@ published: true
     .nav-pills>li.active>a:focus,
     .nav-pills>li.active>a:hover {
       color: black;
-      background-color: #bbb;
+      background-color: #cc5e1e;
+      color: #fff;
     }
 
     .nav-pills>li.active>a {
-      background-color: #ccc;
+      background-color: #4170b0;
+      color: #fff;
     }
   </style>
 </head>
