Changing nav-pills width

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@ published: true
       top: 20px;
     }
 
+    .nav-pills li {
+        width: 10em;
+    }
+
     @media screen and (max-width: 810px) {
       #section1,
       #section2,
